--- a/AppFutbolArg/templates/AppFutbolArg/Blogs/blogs.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Blogs/blogs.html
@@ -5,7 +5,7 @@
 {% block contenidoQueCambia %}
 <div class="contenidoBlogs">
     <div class="container mt-5 margenPosiciones">
-        <h1 style="display: flex; justify-content: center; color: #1D086C; font-weight: bold;">Historias del Fútbol Argentino</h1>
+        <h1 style="display: flex; justify-content: center; color: #020004; font-weight: bold;">Historias del Fútbol Argentino</h1>
         <p class="subrayado" style="color: black;">Animate a publicar tu blog de Fútbol: <a href="/AppFutbolArg/blogs/bloguear" class="btn btn-success">BLOGUEA</a></p>
             <div class="prevBlogs">
                 <div class="blog-container">
