--- a/AppFutbolArg/templates/AppFutbolArg/getEquipos.html
+++ b/AppFutbolArg/templates/AppFutbolArg/getEquipos.html
@@ -2,7 +2,7 @@
 {% load static %}
 <title>{% block title %}Equipos Argentinos | Liga Argentina 2023{% endblock %}</title>
 {% block contenidoQueCambia %}
-<div class="contenido">
+<div class="equipofondo">
     {% if equipos %}
     <div class="container mt-5 margenPosiciones">
         <h2 style="color: darkblack; font-weight: bold; background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,0.8688725490196079) 0%);">Resultado de la búsqueda:</h2>
