--- a/AppFutbolArg/templates/AppFutbolArg/Fixture.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Fixture.html
@@ -2,7 +2,7 @@
 {% load static %}
 <title>{% block title %}Fixture | Liga Argentina 2023{% endblock %}</title>
 {% block contenidoQueCambia %}
-<div class="contenido">
+<div class="equipofondo">
     <div class="container mt-5 margenPosiciones">
         <h2 class="subrayado" style="color: black; font-weight: bold; ">FECHA 23:</h2>
         <table>
