--- a/AppFutbolArg/templates/AppFutbolArg/Inicio.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Inicio.html
@@ -35,7 +35,7 @@
         <div>
         {% block contenidoQueCambia %}
             <header class="masthead bg-primary text-white text-center">
-                <div class="container d-flex align-items-center flex-column">
+                <div class="container d-flex align-items-center flex-column container-ajuste-vertical">
                     <img class="masthead-avatar mb-5" src="/static/AppFutbolArg/assets/img/pelota-de-futbol.png" alt="">
                     <h1 class="masthead-heading mb-0">Liga Argentina 2023</h1>
                     <div class="divider-custom divider-light">
