--- a/AppFutbolArg/templates/AppFutbolArg/login.html
+++ b/AppFutbolArg/templates/AppFutbolArg/login.html
@@ -18,7 +18,7 @@
             {% if error %}
                 <p style="color: red;">{{error}}</p>
             {% endif %}
-            <p style="color: white;">¿Aún no tienes una cuenta? <a href="/AppFutbolArg/registro" class="btn btn-success">Registrate</a></p>
+            <a style="color: white;">¿Aún no tienes una cuenta? <a href="/AppFutbolArg/registro" class="btn btn-success">Registrate</a></a>
         </form>
     </div>
 </body>
