--- a/AppFutbolArg/templates/AppFutbolArg/Inicio.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Inicio.html
@@ -16,7 +16,7 @@
     <title>{% block title %} Liga Argentina 2023{% endblock %}</title>
 </head>
     <body>
-        <nav class="navbar navbar-expand-lg  fixed-top bg-dark" id="mainNav">
+        <nav class="navbar navbar-expand-lg fixed-top bg-dark" id="mainNav">
             <div class="container"><a class="navbar-brand js-scroll-trigger" href="{% url 'Inicio' %}">LIGA ARGENTINA DE FUTBOL</a>
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -25,9 +25,16 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'Fixture' %}">FIXTURE</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'Equipos' %}">EQUIPOS</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'Blogs' %}">BLOGS</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href=""><img src="{{avatar}}" width="40px" alt=""></a></li>
+                        {% if user.is_authenticated %}
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'perfil' %}">
+                            <img src="{{avatar}}" width="40px" alt="" class="rounded-circle">
+                        </a>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'perfil' %}">{{user.username}}</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'logout' %}">Logout</a></li>
+                        {% else %}
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'login' %}">Iniciar Sesion</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'registro' %}">Registro</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
