--- a/AppFutbolArg/templates/AppFutbolArg/Perfil/perfil.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Perfil/perfil.html
@@ -5,7 +5,7 @@
 {% block contenidoQueCambia %}
 <div class="paralogin">
     <div class="formRegistro">
-        <img src="{{ avatar }}" alt="Avatar" style="width: 100px; height: 100px;">
+        <img src="{{ avatar }}" alt="Avatar" style="width: 120px; height: 120px; display: block; margin: 0 auto;">
         <ul>
             <li><p>Username: {{ user.username }}</p></li>
             <li><p>Nombre/s: {{ user.first_name }}</p></li>
