Registro, ver_perfil, arreglar editarPerfil

--- a/AppFutbolArg/templates/AppFutbolArg/Perfil/perfil.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Perfil/perfil.html
@@ -7,14 +7,14 @@
     <div class="formRegistro">
         <img src="{{ avatar }}" alt="Avatar" style="width: 120px; height: 120px; display: block; margin: 0 auto;">
         <ul>
-            <li><p>Username: {{ user.username }}</p></li>
-            <li><p>Nombre/s: {{ user.first_name }}</p></li>
-            <li><p>Apellido/s: {{ user.last_name }}</p></li>
-            <li><p>Nacionalidad: {{ user.profile.nacionalidad }}</p></li>
-            <li><p>Hincha de: {{ user.profile.hincha }}</p></li>
+            <li><p>Username: {{ request.user.username }}</p></li>
+            <li><p>Nombre/s: {{ request.user.first_name }}</p></li>
+            <li><p>Apellido/s: {{ request.user.last_name }}</p></li>
+            <li><p>Nacionalidad: {{ perfil.nacionalidad }}</p></li>
+            <li><p>Hincha de: {{ perfil.hincha }}</p></li>
         </ul>
-        <a href="/AppFutbolArg/perfil/editarPerfil" class="btn btn-success" style="text-decoration: none; color: white;">Editar Perfil</a>
-        <a href="/AppFutbolArg/perfil/cambiarAvatar/" class="btn btn-success" style="text-decoration: none; color: white;">Avatar</a>
+        <a href="{% url 'editarPerfil' %}" class="btn btn-success" style="text-decoration: none; color: white;">Editar Perfil</a>
+        <a href="{% url 'editAvatar' %}" class="btn btn-success" style="text-decoration: none; color: white;">Avatar</a>
     </div>
 </div>
 {% endblock %}
