--- a/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
+++ b/AppFutbolArg/static/AppFutbolArg/css/fabifriasStyles.css
@@ -265,3 +265,33 @@ table td {
     height: 700px;
     justify-content: center;
 }
+
+.btn-social {
+  border-radius: 100% !important;
+  display: inline-flex !important;
+  width: 3.25rem !important;
+  height: 3.25rem !important;
+  font-size: 1.25rem !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+
+.btn-social {
+  margin-bottom: 0.5rem; }
+
+
+.containerfoot {
+  width: 100%;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+  margin-right: auto;
+  margin-left: auto; }
+
+
+.footer {
+  padding-top: 2rem !important;
+  padding-bottom: 1rem !important;
+  background-color: #140125;
+  color: #fff;
+}
