--- a/AppFutbolArg/templates/AppFutbolArg/Inicio.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Inicio.html
@@ -63,8 +63,29 @@
                 </div>
                 {% endif %}
             </header>
-            {% endblock %}
         </div>
-        <footer></footer>
+        <footer class="footer text-center">
+            <div class="containerfoot">
+                <div class="row">
+                    <!-- Footer Location-->
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="container mb-4">ABOUT ME</h4>
+                        <p class="pre-wrap lead mb-0">ALGO / BORRAR</p>
+                    </div>
+                    <!-- Footer Social Icons-->
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="mb-4"></h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/fabian_frias_rc/"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/fabian-oscar-frias-5533481b5/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                    </div>
+                    <!-- Footer About Text-->
+                    <div class="col-lg-4">
+                        <h4 class="mb-4">NO SE</h4>
+                        <p class="pre-wrap lead mb-0">VER</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        {% endblock %}
     </body>
 </html>
