--- a/AppFutbolArg/static/AppFutbolArg/css/styles.css
+++ b/AppFutbolArg/static/AppFutbolArg/css/styles.css
@@ -7203,7 +7203,7 @@ h3 {
   .divider-custom.divider-light .divider-custom-line {
     background-color: #fff; }
   .divider-custom.divider-light .divider-custom-icon {
-    color: #fff !important; }
+    color: #36FF00 !important; }
 
 .btn-xl {
   padding: 1rem 1.75rem;
