--- a/AppFutbolArg/templates/AppFutbolArg/Inicio.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Inicio.html
@@ -17,7 +17,7 @@
 </head>
     <body>
         <nav class="navbar navbar-expand-lg fixed-top bg-dark" id="mainNav">
-            <div class="container"><a class="navbar-brand js-scroll-trigger" href="{% url 'Inicio' %}">LIGA ARGENTINA DE FUTBOL</a>
+            <div class="container"><a class="navbar-brand js-scroll-trigger" href="{% url 'Inicio' %}">LIGA ARGENTINA</a>
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
@@ -25,6 +25,7 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'Fixture' %}">FIXTURE</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'Equipos' %}">EQUIPOS</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'Blogs' %}">BLOGS</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'Blogs' %}">FORO</a></li>
                         {% if user.is_authenticated %}
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'perfil' %}">
                             <img src="{{avatar}}" width="40px" alt="" class="rounded-circle">
@@ -44,7 +45,7 @@
             <header class="masthead bg-primary text-white text-center">
                 <div class="container d-flex align-items-center flex-column container-ajuste-vertical">
                     <img class="masthead-avatar mb-5" src="/static/AppFutbolArg/assets/img/pelota-de-futbol.png" alt="">
-                    <h1 class="masthead-heading mb-0">Liga Argentina 2023</h1>
+                    <h1 class="masthead-heading mb-0">Liga Argentina de Fútbol 2023</h1>
                     <div class="divider-custom divider-light">
                         <div class="divider-custom-line"></div>
                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
