--- a/AppFutbolArg/templates/AppFutbolArg/Inicio.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Inicio.html
@@ -71,7 +71,7 @@
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="container mb-4">ABOUT ME</h4>
-                        <p class="pre-wrap lead mb-0">ALGO / BORRAR</p>
+                        <p class="pre-wrap lead mb-0"><a href="{% url 'AboutMe' %}" style="color: white">Conoceme</a></p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
@@ -81,8 +81,8 @@
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="mb-4">NO SE</h4>
-                        <p class="pre-wrap lead mb-0">VER</p>
+                        <h4 class="mb-4">CONTACTO:</h4>
+                        <p class="pre-wrap lead mb-0">fabianoscarfrias@gmai.com</p>
                     </div>
                 </div>
             </div>
