--- a/AppFutbolArg/templates/AppFutbolArg/getEquipos.html
+++ b/AppFutbolArg/templates/AppFutbolArg/getEquipos.html
@@ -44,6 +44,7 @@
                 {% endfor %}
             </tbody>
         </table>
+        <a class="btn btn-primary" href="{% url 'Equipos' %}">Regresar</a>
     </div>
     {% else %}
     <div class="container mt-5 margenPosiciones" style="background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,0.8688725490196079) 0%);">
