--- a/AppFutbolArg/templates/AppForoArg/foro.html
+++ b/AppFutbolArg/templates/AppForoArg/foro.html
@@ -6,15 +6,15 @@
   <div class="container mt-5 margenPosiciones">
      <div class="blog-item">
        <h1 class="subrayado" style="color: #1D086C; font-weight: bold;">Foro</h1>
-
-          <h3 class="subrayado">Mensajes</h3>
           <div class="blogsLeer">
               <ul>
                 {% for mensaje in mensajes %}
                   <li>
                   <img src="{{ mensaje.autor.userprofile.avatar.url }}" alt="Avatar" style="width: 40px; height: 40px; display: inline-block; vertical-align: middle;">
-                  <span style="display: inline-block; vertical-align: middle;">{{ mensaje.autor.username }} - {{ mensaje.enviado }}</span>
-                      <p>{{ mensaje.contenido }}</p>
+                  <span style="display: inline-block; vertical-align: middle;">
+                    <a href="{% url 'visitar_perfil' autor_id=mensaje.autor.id %}" style="color: black">{{ mensaje.autor.username }}</a> - {{ mensaje.enviado }}
+                  </span>
+                    <p>{{ mensaje.contenido }}</p>
                   </li>
                   {% if request.user.is_superuser %}
                     <form action="{% url 'AppForoArg:eliminar_mensaje' mensaje.id %}" method="post">
@@ -25,7 +25,7 @@
                 {% endfor %}
               </ul>
             </div>
-          <h4 class="subrayado">Enviar mensaje</h4>
+          <h4 class="subrayado">Escribe tu mensaje</h4>
           <form method="post"> {% csrf_token %}
             <div class="foroEnviar">
               {{ form.contenido }}
