--- a/AppFutbolArg/templates/AppFutbolArg/Blogs/bloguear.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Blogs/bloguear.html
@@ -7,7 +7,7 @@
 <div class="contenidoBlogs">
     <div class="container mt-5 margenPosiciones">
       <div class="d-flex justify-content-center">
-        <form method="POST" enctype="multipart/form-data" class="formBlogsEditar"> {% csrf_token %}
+        <form method="POST" enctype="multipart/form-data" class="blogsCrear"> {% csrf_token %}
           <h1 style="color: #281c34; font-weight: bold; display: flex; justify-content: center; align-items: center;">Escribe tu Blog</h1>
             {{ form.as_p }}
           <button type="submit" class="btn btn-primary">Publicar</button>
