--- a/AppFutbolArg/templates/AppFutbolArg/Inicio.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Inicio.html
@@ -81,8 +81,8 @@
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="mb-4">CONTACTO:</h4>
-                        <p class="pre-wrap lead mb-0">fabianoscarfrias@gmai.com</p>
+                        <h4 class="mb-4">INFO EXTRA</h4>
+                        <p class="pre-wrap lead mb-0"><a href="{% url 'readmeinfo' %}" style="color: white">Readme</a></p>
                     </div>
                 </div>
             </div>
