--- a/AppFutbolArg/templates/AppFutbolArg/Perfil/aboutme.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Perfil/aboutme.html
@@ -22,7 +22,6 @@
                    A la par estudio "Seguridad Informatica", pero a lo que apunto es trabajar de Desarrollador, <br>
                    primero de sitos web, y luego de Software. Gracias por leerme. <br>
                    Me encanta el futbol, es por eso que el sitio se trata de esto.
-
                 </p>
                 <ul class="list basic_info">
                     <li><a><i class="lnr lnr-envelope"></i> fabianoscarfrias@gmail.com</a></li>
@@ -32,7 +31,8 @@
                 <ul>
                     <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/FabianFrias25/"><i class="fab fa-github"></i></a>
                     <a class="btn btn-outline-dark btn-social mx-1" href="https://www.instagram.com/fabian_frias_rc/"><i class="fab fa-fw fa-instagram"></i></a>
-                    <a class="btn btn-outline-dark btn-social mx-1" href="https://www.linkedin.com/in/fabian-oscar-frias-5533481b5/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-dark btn-social mx-1" href="https://www.linkedin.com/in/fabian-oscar-frias-5533481b5/"><i class="fab fa-fw fa-linkedin-in"></i></a><br>
+                    <a href="{% url 'readmeinfo' %}" style="color: black; font-weight: bold;">Lee sobre la pagina</a>
                 </ul>
             </div>
     </div>
