--- a/AppFutbolArg/templates/AppFutbolArg/Posiciones.html
+++ b/AppFutbolArg/templates/AppFutbolArg/Posiciones.html
@@ -4,6 +4,13 @@
 {% block contenidoQueCambia %}
 <div class="equipofondo">
     <div class="container mt-5 margenPosiciones">
+        <div class="campeon2023">
+            <h1>Campeón</h1>
+            <img src="/static/AppFutbolArg/assets/img/escudo-river-plate.png" alt="Escudo de River" srcset="">
+            <a href="/AppFutbolArg/getequipo/?csrfmiddlewaretoken=y9aX5LNVv2I35gnRe9wilbuYTO5EMdoIV4BsKI8OHv6Srbk9uQh9Kf9QjQ8URnbv&Nombre=River+Plate">
+                River Plate
+            </a>
+        </div>
     <table id="posiciones" class="tablesorter1">
         <thead>
             <tr style="background: grey; color: darkblack">
